--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular2-moment": "1.8.0",
     "bootstrap": "4.0.0",
     "core-js": "2.4.1",
+    "event-source-polyfill": "^0.0.12",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
     "moment": "2.20.1",
@@ -28,11 +29,11 @@
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.5.6",
-    "swagger-ui": "2.2.10",
     "sockjs-client": "1.1.4",
-    "webstomp-client": "1.2.0",
+    "swagger-ui": "2.2.10",
     "tether": "1.4.0",
     "tslib": "1.9.0",
+    "webstomp-client": "1.2.0",
     "zone.js": "0.8.19"
   },
   "devDependencies": {
@@ -71,12 +72,15 @@
     "karma-webpack": "2.0.4",
     "lint-staged": "6.0.0",
     "merge-jsons-webpack-plugin": "1.0.14",
+    "node-sass": "4.5.3",
     "phantomjs-prebuilt": "2.1.16",
+    "postcss-loader": "2.0.9",
     "prettier": "1.9.2",
     "protractor": "5.1.2",
     "protractor-jasmine2-screenshot-reporter": "0.4.0",
     "proxy-middleware": "0.15.0",
     "rimraf": "2.6.1",
+    "sass-loader": "6.0.6",
     "source-map": "0.6.1",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "style-loader": "0.20.2",
@@ -87,9 +91,6 @@
     "tslint-config-prettier": "1.6.0",
     "tslint-loader": "sendilkumarn/tslint-loader",
     "typescript": "2.6.2",
-    "sass-loader": "6.0.6",
-    "node-sass": "4.5.3",
-    "postcss-loader": "2.0.9",
     "uglifyjs-webpack-plugin": "1.2.2",
     "webpack": "4.0.0",
     "webpack-cli": "2.0.10",
@@ -104,14 +105,17 @@
     "node": ">=6.9.0"
   },
   "lint-staged": {
-    "*.ts": ["prettier --write", "git add"]
+    "*.ts": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "resolutions": {
     "source-map": "0.6.1"
   },
   "scripts": {
     "precommit": "lint-staged",
-    "prettier:format":"yarn prettier --write **/*.ts",
+    "prettier:format": "yarn prettier --write **/*.ts",
     "lint": "tslint --project tsconfig.json -e 'node_modules/**'",
     "lint:fix": "yarn run lint -- --fix",
     "ngc": "ngc -p tsconfig-aot.json",
