--- a/src/test/gatling/conf/gatling.conf
+++ b/src/test/gatling/conf/gatling.conf
@@ -120,10 +120,10 @@ gatling {
       #noActivityTimeout = 30  # Period, in seconds, for which Gatling may have no activity before considering a leak may be happening
     }
     graphite {
-      #light = false              # only send the all* stats
+      #light = false              # only sendMessage the all* stats
       #host = "localhost"         # The host where the Carbon server is located
       #port = 2003                # The port to which the Carbon server listens to (2003 is default for plaintext, 2004 is default for pickle)
-      #protocol = "tcp"           # The protocol used to send data to Carbon (currently supported : "tcp", "udp")
+      #protocol = "tcp"           # The protocol used to sendMessage data to Carbon (currently supported : "tcp", "udp")
       #rootPathPrefix = "gatling" # The common prefix of all metrics sent to Graphite
       #bufferSize = 8192          # GraphiteDataWriter's internal data buffer size, in bytes
       #writeInterval = 1          # GraphiteDataWriter's write interval, in seconds
